# MyStarWarFuel

./: CMakeLists.txt
inc/: BurnFueldComand.h  CheckFuelComand.h  ComandExeption.h  CommandTypes.h  ICommand.h  IFuelObject.h  MacroComand.h  MoveComand.h  MySpaceship.h  RotateComand.h  comandhendlerex.h  comandwritelog.h  logCntr.h
src/: BurnFueldComand.cpp  CMakeLists.txt  CheckFuelComand.cpp  ComandExeption.cpp  IFuelObject.cpp  Icommand.cpp  MacroComand.cpp  MoveComand.cpp  MySpaceship.cpp  RotateComand.cpp  comandhendlerex.cpp  comandwritelog.cpp  logCntr.cpp
test/: CMakeLists.txt  test_1_CheckFuelComand_good.cpp  test_2_CheckFuelComand_bad.cpp  test_3_BurnFuelComand.cpp  test_4_MacroComand.cpp
